--- a/components/header.html
+++ b/components/header.html
@@ -5,8 +5,10 @@
     <ul class="nav-links">
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="index.html#projects">Featured Gallery</a></li>
-        <li><a href="projects.html">All Projects</a></li>
-        <li><a href="blog.html">Blog</a></li>
+        <li><a href="index.html#about">About</a></li>
+        <li><a href="index.html#skills">Skills</a></li>
+        <li><a href="/pages/projects.html">All Projects</a></li>
+        <li><a href="/pages/blog.html">Blog</a></li>
     </ul>
     
     <div class="nav-controls">
