updating all site files with most recent versions

--- a/components/header.html
+++ b/components/header.html
@@ -16,5 +16,20 @@
             <button class="theme-option active" data-theme="light">☀️</button>
             <button class="theme-option" data-theme="dark">🌙</button>
         </div>
+            <button class="menu-toggle" id="menuToggle">☰</button>
     </div>
 </nav>
+
+<div class="overlay-menu" id="overlayMenu">
+    <div class="overlay-menu-content">
+        <button class="overlay-menu-close" id="menuClose">✕</button>
+        <ul class="overlay-menu-links">
+            <li><a href="index.html" class="overlay-link active">Home</a></li>
+            <li><a href="index.html#projects" class="overlay-link">Featured Gallery</a></li>
+            <li><a href="index.html#about" class="overlay-link">About</a></li>
+            <li><a href="index.html#skills" class="overlay-link">Skills</a></li>
+            <li><a href="/pages/projects.html" class="overlay-link">All Projects</a></li>
+            <li><a href="/pages/blog.html" class="overlay-link">Blog</a></li>
+        </ul>
+    </div>
+</div>
