please god work

--- a/components/about.html
+++ b/components/about.html
@@ -12,7 +12,7 @@
                 
                 <div class="profile-image-container">
                     <!-- @todo: REPLACE THIS PIC LATER!!!!!!!!!-->
-                    <img src="/images/ugly stinky guy.png">
+                    <img src="images/ugly stinky guy.png">
                 </div>
             </div>
 
