final push for the night as i fill content

--- a/components/about.html
+++ b/components/about.html
@@ -12,7 +12,7 @@
                 
                 <div class="profile-image-container">
                     <!-- @todo: REPLACE THIS PIC LATER!!!!!!!!!-->
-                    <img src="images/ugly stinky guy.png">
+                    <img class= "profile-image" src="../images/ItsAMe.jpg">
                 </div>
             </div>
 
@@ -29,7 +29,12 @@
                 <div class="bio-content">
                     <p>Hi, I'm Z! </p>
                     
-                    <p>Second paragraph about your experience, what drives you, what you're looking for.</p>
+                    <p>I'm a recent Game Design MFA graduate and indie developer living in Chicago. I've spent the last 5 years learning
+                        game design, game programming, shader programming, 3D animation... anything you can name,
+                        I've probably (at the very least) tried! I love games. Over the years, they've given me many things:
+                        community, discipline, knowledge, joy. My artistic practice is one of giving back to that very same space
+                        that helped me grow and be a better person.
+                    </p>
                     
                     <p>Third paragraph - anything else you want people to know.</p>
                 </div>
@@ -55,7 +60,7 @@
             <span class="terminal-prompt">$</span>
             <span class="terminal-command">cat interests.txt</span>
         </div>
-        <div class="terminal-output">Horror movies, baseball, and my two cats!</div>
+        <div class="terminal-output">Horror media, baseball, and my two cats!</div>
         
         <div class="terminal-line">
             <span class="terminal-prompt">$</span>
