--- a/components/about.html
+++ b/components/about.html
@@ -12,7 +12,7 @@
                 
                 <div class="profile-image-container">
                     <!-- @todo: REPLACE THIS PIC LATER!!!!!!!!!-->
-                    <img class= "profile-image" src="../images/ItsAMe.jpg">
+                    <img class= "profile-image" src="images/ItsAMe.jpg">
                 </div>
             </div>
 
