--- a/components/about.html
+++ b/components/about.html
@@ -29,14 +29,16 @@
                 <div class="bio-content">
                     <p>Hi, I'm Z! </p>
                     
-                    <p>I'm a recent Game Design MFA graduate and indie developer living in Chicago. I've spent the last 5 years learning
-                        game design, game programming, shader programming, 3D animation... anything you can name,
-                        I've probably (at the very least) tried! I love games. Over the years, they've given me many things:
-                        community, discipline, knowledge, joy. My artistic practice is one of giving back to that very same space
-                        that helped me grow and be a better person.
-                    </p>
+                    <p>I'm a game designer living in Chicago, IL. I've loved games ever since I scraped together every last penny for Kingdom Hearts 2, and 
+                        never looked back. Nowadays, I spend my time working in Unreal Engine 5 building atmospheric first-person
+                         experiences. My MFA thesis was a narrative game about learning to live with old grief, combining post-processing effects with
+                         audio from my childhood home videos to anchor the game in real, lived history. 
+                         I love work that's personal, deeply weird, and unsettling.</p>
+                         
+                         <p>Lately, I've been diving deeper into tech art and shader programming. When I'm not working on my projects, 
+                            I'm hanging out with my cats, writing about horror games and movies, and building more gunpla than my shelves can handle.</p>
                     
-                    <p>Third paragraph - anything else you want people to know.</p>
+                    <p></p>
                 </div>
             </div>
         </div>
@@ -55,7 +57,7 @@
             <span class="terminal-prompt">$</span>
             <span class="terminal-command">cat favorite games.txt</span>
         </div>
-        <div class="terminal-output">Kingdom Hearts 2, World of Warcraft, Outer Wilds, Demon's Souls... and many more!</div>
+        <div class="terminal-output">Kingdom Hearts 2, Resident Evil 4, World of Warcraft, Outer Wilds, Demon's Souls... and many more!</div>
         
         <div class="terminal-line">
             <span class="terminal-prompt">$</span>
